tests/build/fail/widget_new/incorrect_when_expr_type1.stderr
error[E0308]: mismatched types
  --> $DIR/incorrect_when_expr_type1.rs:10:19
   |
10 |         when self.margin {
   |                   ^^^^^^ expected `bool`, found struct `SideOffsets`
